enlarge z-index as a workaround to fix Ziltag on tumblr

--- a/src/component/switch/index.css
+++ b/src/component/switch/index.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 52px;
     height: 59px;
-    z-index: 2;
+    z-index: 1002;
     background: url(switch-init.png);
     cursor: pointer;
 }
