--- a/src/component/ziltag-preview/index.css
+++ b/src/component/ziltag-preview/index.css
@@ -1,6 +1,6 @@
 .ziltag-ziltag-preview {
   position: absolute;
-  z-index: 1;
+  z-index: 1001;
   top: -18px;
   width: 172px;
   height: 60px;
