--- a/src/component/ziltag-reader/index.css
+++ b/src/component/ziltag-reader/index.css
@@ -9,7 +9,7 @@
 
 .ziltag-ziltag-reader__cover {
     position: fixed;
-    z-index: 3;
+    z-index: 1003;
     top: 0;
     left: 0;
     width: 100%;
